--- a/package.json
+++ b/package.json
@@ -9,15 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^6.2.8",
+    "gsap": "^3.9.1",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "three": "^0.138.3"
   },
   "devDependencies": {
+    "@types/gsap": "^3.0.0",
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
+    "@types/three": "^0.138.0",
+    "autoprefixer": "^10.4.3",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
+    "postcss": "^8.4.11",
+    "sass": "^1.49.9",
+    "tailwindcss": "^3.0.23",
     "typescript": "4.6.2"
   }
 }
