--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^6.2.8",
+    "gray-matter": "^4.0.3",
     "gsap": "^3.9.1",
     "next": "12.1.0",
     "react": "17.0.2",
