--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "framer-motion": "^6.2.8",
     "gray-matter": "^4.0.3",
     "gsap": "^3.9.1",
+    "marked": "^4.0.12",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "three": "^0.138.3"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.2",
     "@types/gsap": "^3.0.0",
+    "@types/marked": "^4.0.2",
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
     "@types/three": "^0.138.0",
