--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@badrap/bar-of-progress": "^0.1.2",
     "framer-motion": "^6.2.8",
     "gray-matter": "^4.0.3",
     "gsap": "^3.9.1",
